--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://school.cryptobanter.com/?utm_source=cbanter&utm_medium=cbanter&utm_campaign=cbanter">Courses</a></li>
+                <li><a href="https://www.cryptobanter.com/banter-capital/">About</a></li>
+                <li><a href="https://www.cryptobanter.com/about-crypto-banter/">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -204,8 +204,8 @@
     </main>
     <footer>
         <div class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
+            <a href="https://www.cryptobanter.com/terms-of-service/#privacy">Privacy Policy</a>
+            <a href="https://www.cryptobanter.com/terms-of-service/">Terms of Service</a>
         </div>
         <p>&copy; 2024 Crypto Banter Academy. All rights reserved.</p>
     </footer>
