--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                     <p>Immerse yourself in the latest trends and developments in the cryptocurrency world with our daily updates. This subscription offers you the freshest news, in-depth analysis, and critical insights every day, ensuring you're always at the forefront of the market. Ideal for enthusiasts and professionals alike, these daily updates keep you informed and prepared to navigate the fast-paced crypto environment...</p>
                     <a href="premium plus.html" class="button">Learn More</a>
                 </div>
+                <div class="course-card">
+                    <h3>Beginner's Guide to Crypto</h3>
+                    <p>Get started with cryptocurrency with our comprehensive beginner's guide. This course covers the essentials, from setting up wallets to understanding blockchain technology. Perfect for those new to the crypto space...</p>
+                    <a href="beginners.html" class="button">Learn More</a>
+                </div>
                 <!-- Add more course cards as needed -->
             </div>
         </section>
