--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
                     <p>Get started with cryptocurrency with our comprehensive beginner's guide. This course covers the essentials, from setting up wallets to understanding blockchain technology. Perfect for those new to the crypto space...</p>
                     <a href="beginners.html" class="button">Learn More</a>
                 </div>
-                <!-- Add more course cards as needed -->
+                <div class="course-card">
+                    <h3>Advanced Crypto Trading Strategies</h3>
+                    <p>Take your trading skills to the next level with this advanced course. Learn how to analyze market trends, leverage technical analysis, and implement successful strategies in the fast-moving crypto market. Perfect for experienced traders...</p>
+                    <a href="advanced.html" class="button">Learn More</a>
+                </div>
             </div>
         </section>
         <section class="exchanges">
