--- a/index.html
+++ b/index.html
@@ -180,24 +180,24 @@
             <h2>Featured Courses</h2>
             <div class="course-container">
                 <div class="course-card">
-                    <h3>Weekly Updates Subscription</h3>
-                    <p>Stay ahead of the curve with our weekly updates! Subscribe now to receive the latest insights, strategies, and tips directly to your inbox. Each week, we’ll cover key topics, new developments in the cryptocurrency world, and practical advice to enhance your learning experience. Whether you're a beginner or an advanced learner, our updates will help you stay informed and engaged...</p>
-                    <a href="premium.html" class="button">Learn More</a>
+                    <h3>Starter Plan Subscription</h3>
+                    <p>For beginners, offering basic features and support. Subscribe now to receive the latest insights, strategies, and tips directly to your inbox. Our updates will help you stay informed and engaged...</p>
+                    <a href="premium.html" class="button">Subscribe Now</a>
                 </div>
                 <div class="course-card">
-                    <h3>Daily Updates</h3>
-                    <p>Immerse yourself in the latest trends and developments in the cryptocurrency world with our daily updates. This subscription offers you the freshest news, in-depth analysis, and critical insights every day, ensuring you're always at the forefront of the market. Ideal for enthusiasts and professionals alike, these daily updates keep you informed and prepared to navigate the fast-paced crypto environment...</p>
-                    <a href="premium plus.html" class="button">Learn More</a>
+                    <h3>Hodler Plan Subscription </h3>
+                    <p>For those who aim to hold onto crypto for long-term gains, with additional perks. This subscription offers you the freshest news, in-depth analysis, and critical insights every day, ensuring you're always at the forefront of the market. Ideal for enthusiasts and professionals alike, these daily updates keep you informed and prepared to navigate the fast-paced crypto environment...</p>
+                    <a href="premium plus.html" class="button">Subscribe Now</a>
                 </div>
                 <div class="course-card">
-                    <h3>Beginner's Guide to Crypto</h3>
-                    <p>Get started with cryptocurrency with our comprehensive beginner's guide. This course covers the essentials, from setting up wallets to understanding blockchain technology. Perfect for those new to the crypto space...</p>
-                    <a href="beginners.html" class="button">Learn More</a>
+                    <h3>Trader Plan Subscription </h3>
+                    <p> Tailored for more active traders, with analytics tools and trade tracking. This course covers the essentials, from setting up wallets to understanding blockchain technology. Perfect for those new to the crypto space...</p>
+                    <a href="beginners.html" class="button">Subscribe Now</a>
                 </div>
                 <div class="course-card">
-                    <h3>Advanced Crypto Trading Strategies</h3>
-                    <p>Take your trading skills to the next level with this advanced course. Learn how to analyze market trends, leverage technical analysis, and implement successful strategies in the fast-moving crypto market. Perfect for experienced traders...</p>
-                    <a href="advanced.html" class="button">Learn More</a>
+                    <h3>Whale Plan Subscription  </h3>
+                    <p>For high-net-worth individuals or institutions with exclusive features and priority support. Learn how to analyze market trends, leverage technical analysis, and implement successful strategies in the fast-moving crypto market. Perfect for experienced traders...</p>
+                    <a href="advanced.html" class="button">Subscribe Now</a>
                 </div>
             </div>
         </section>
